--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template",
+  "name": "nodejs-rest-api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,16 +11,18 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "express": "4.17.1",
-    "morgan": "1.10.0"
+    "express": "4.18.2",
+    "joi": "^17.11.0",
+    "morgan": "1.10.0",
+    "nanoid": "3.3.4"
   },
   "devDependencies": {
-    "eslint": "7.19.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.25.3",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15"
+    "eslint-plugin-promise": "6.1.1",
+    "nodemon": "3.0.2"
   }
 }
